crates/plotnik-lib/tests/03-analyze/alternations/mixed_untagged_first.txt
Q = [
  (a)
  B: (b)
]
==== diagnostics ====
error: cannot mix labeled and unlabeled branches
 --> query.ptk:2:3
  |
2 |   (a)
  |   ^^^
3 |   B: (b)
  |   - enum branch here
  |
help: use all labels for an enum, or none for a merged struct
==== symbols ====
Q
